--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.google.code.gson:gson:2.10.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
